mobile alignment fixed

--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 html {
     overflow-x: hidden;
 }
+
+html, body {
+  overflow-x: hidden;
+}
+
 body {
     padding-top:150px;
     background-color: white;
@@ -18,7 +23,7 @@ body {
 }
 
 *::-webkit-scrollbar-track {
-  background: #ffffff;      /* track background */
+  background: #ffffff67;      /* track background */
   border-radius: 4px;
 }
 
@@ -31,12 +36,28 @@ body {
 .navbar {
     background-color: #E6CCB2;
     box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);
-
+    width:100%;
+    max-width:100%;
 }
 .navbar-brand img {
     width: 45px;
     height:45px;
     border-radius: 100%;
+}
+
+.navbar-nav {
+  min-width: 0;
+}
+
+.container-fluid {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+.row {
+  margin-left: 0;
+  margin-right: 0;
 }
 
 /* section  1 - home pg */
@@ -344,6 +365,8 @@ body {
     max-height:60vh;
     overflow-y: auto;
 }
+
+
 
 #soundSessions .card2 {
     background-image:url(imgs/communitySoundBath.png);
